# python-comrak

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.py  pyproject.toml
comrak/: __init__.py
src/: lib.rs
tests/: test_comrak.py
tests/data/: gfm-table.html  gfm-table.md
