[tool.poetry]
name = "comrak"
version = "0.1.0"
description = "CommonMark + GFM compatible Markdown parser and renderer"
authors = ["zengxs <i@zengxs.com>"]
license = "BSD-2-Clause"
readme = "README.md"
build = "build.py"
packages = [
    # python code
    { include = "comrak" },
    # rust code
    { include = "comrak-rs" },
    { include = "Cargo.toml" },
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
setuptools-rust = "^0.10.6"
yapf = "^0.28.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
