[tool.poetry]
name = "comrak"
version = "0.1.0"
description = "CommonMark + GFM compatible Markdown parser and renderer"
authors = ["zengxs <i@zengxs.com>"]
license = "BSD-2-Clause"
readme = "README.md"
build = "build.py"
include = [
    "src/**/*",
    "comrak-rs/**/*",
    "Cargo.toml",
]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
setuptools-rust = "^0.10.6"
pytest = "^5.0.1"
pytest-cov = "^2.7.1"
hypothesis = "^4.28.2"
flake8 = "^3.7.8"
yapf = "^0.28.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
